--- a/index.html
+++ b/index.html
@@ -4,21 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Grid</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        /* General body styling */
         body {
             background-color: #333;
             min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             color: white;
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
         }
+
+        /* Button styling */
+        .button-container {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            color: white;
+            background-color: #555;
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+            margin-top: 20px;
+        }
+
+        button:hover {
+            background-color: #777;
+        }
+
+        /* Grid container styling */
         .container {
             display: grid;
             grid-template-columns: repeat(4, 200px);
             gap: 10px;
             margin-top: 20px;
+            max-width: 840px;
         }
+
+        /* Color box styling */
         .color-box {
             width: 200px;
             height: 100px;
@@ -28,60 +60,48 @@
             font-size: 18px;
             cursor: pointer;
             color: white;
+            border-radius: 5px;
             transition: background-color 1s;
-            border-radius: 5px;
-        }
-        .button-container {
-            margin-top: 20px;
-            text-align: center;
-        }
-        .btn-random {
-            background-color: #555;
-            color: white;
-            border: none;
-            margin-top: 20px;
-            border-radius: 5px;
-        }
-        .btn-color {
-            margin-top: 20px;
-            color: black;
         }
     </style>
 </head>
-<body class="d-flex flex-column align-items-center">
+<body>
 
+<!-- Random Colors Button -->
 <div class="button-container">
-    <button class="btn btn-primary btn-random" onclick="startRandomColors()">Random Colors</button>
+    <button onclick="startRandomColors()">Random Colors</button>
 </div>
 
+<!-- Grid of Color Boxes -->
 <div class="container">
-    <div class="color-box bg-danger" onclick="changeBackgroundColor('red')">This is red</div>
-    <div class="color-box bg-dark" onclick="changeBackgroundColor('black')">This is black</div>
-    <div class="color-box bg-success" onclick="changeBackgroundColor('green')">This is green</div>
-    <div class="color-box bg-primary" onclick="changeBackgroundColor('blue')">This is blue</div>
+    <div class="color-box" style="background-color: red;" onclick="changeBackgroundColor('red')">This is red</div>
+    <div class="color-box" style="background-color: black;" onclick="changeBackgroundColor('black')">This is black</div>
+    <div class="color-box" style="background-color: green;" onclick="changeBackgroundColor('green')">This is green</div>
+    <div class="color-box" style="background-color: blue;" onclick="changeBackgroundColor('blue')">This is blue</div>
     <div class="color-box" style="background-color: brown;" onclick="changeBackgroundColor('brown')">This is brown</div>
     <div class="color-box" style="background-color: purple;" onclick="changeBackgroundColor('purple')">This is purple</div>
-    <div class="color-box bg-warning" onclick="changeBackgroundColor('yellow')">This is yellow</div>
-    <div class="color-box" style="background-color: pink;" onclick="changeBackgroundColor('pink')">This is pink</div>
-    <div class="color-box bg-info" onclick="changeBackgroundColor('cyan')">This is cyan</div>
-    <div class="color-box bg-secondary" onclick="changeBackgroundColor('gray')">This is gray</div>
+    <div class="color-box" style="background-color: yellow; color: black;" onclick="changeBackgroundColor('yellow')">This is yellow</div>
+    <div class="color-box" style="background-color: pink; color: black;" onclick="changeBackgroundColor('pink')">This is pink</div>
+    <div class="color-box" style="background-color: cyan; color: black;" onclick="changeBackgroundColor('cyan')">This is cyan</div>
+    <div class="color-box" style="background-color: gray;" onclick="changeBackgroundColor('gray')">This is gray</div>
     <div class="color-box" style="background-color: orange;" onclick="changeBackgroundColor('orange')">This is orange</div>
     <div class="color-box" style="background-color: violet;" onclick="changeBackgroundColor('violet')">This is violet</div>
     <div class="color-box" style="background-color: teal;" onclick="changeBackgroundColor('teal')">This is teal</div>
     <div class="color-box" style="background-color: navy;" onclick="changeBackgroundColor('navy')">This is navy</div>
     <div class="color-box" style="background-color: maroon;" onclick="changeBackgroundColor('maroon')">This is maroon</div>
-    <div class="color-box" style="background-color: lime;" onclick="changeBackgroundColor('lime')">This is lime</div>
+    <div class="color-box" style="background-color: lime; color: black;" onclick="changeBackgroundColor('lime')">This is lime</div>
     <div class="color-box" style="background-color: olive;" onclick="changeBackgroundColor('olive')">This is olive</div>
     <div class="color-box" style="background-color: magenta;" onclick="changeBackgroundColor('magenta')">This is magenta</div>
     <div class="color-box" style="background-color: coral;" onclick="changeBackgroundColor('coral')">This is coral</div>
     <div class="color-box" style="background-color: salmon;" onclick="changeBackgroundColor('salmon')">This is salmon</div>
-    <div class="color-box" style="background-color: gold;" onclick="changeBackgroundColor('gold')">This is gold</div>
-    <div class="color-box" style="background-color: silver;" onclick="changeBackgroundColor('silver')">This is silver</div>
-    <div class="color-box" style="background-color: skyblue;" onclick="changeBackgroundColor('skyblue')">This is skyblue</div>
-    <div class="color-box" style="background-color: tan;" onclick="changeBackgroundColor('tan')">This is tan</div>
+    <div class="color-box" style="background-color: gold; color: black;" onclick="changeBackgroundColor('gold')">This is gold</div>
+    <div class="color-box" style="background-color: silver; color: black;" onclick="changeBackgroundColor('silver')">This is silver</div>
+    <div class="color-box" style="background-color: skyblue; color: black;" onclick="changeBackgroundColor('skyblue')">This is skyblue</div>
+    <div class="color-box" style="background-color: tan; color: black;" onclick="changeBackgroundColor('tan')">This is tan</div>
 </div>
 
-<button id="colorButton" class="btn btn-color" onclick="changeBackgroundToButtonColor()">White</button>
+<!-- Dynamic Color Button -->
+<button id="colorButton" onclick="changeBackgroundToButtonColor()">White</button>
 
 <script>
     function changeBackgroundColor(color) {
@@ -103,15 +123,15 @@
                 } while (usedColors.has(randomColor)); // Ensure the color is not repeated
                 usedColors.add(randomColor);
                 box.style.backgroundColor = randomColor;
+                box.style.color = isLightColor(randomColor) ? 'black' : 'white';
             });
 
             // Change the color and text of the button
             const colorButton = document.getElementById('colorButton');
             const randomButtonColor = getRandomColor();
             colorButton.style.backgroundColor = randomButtonColor;
-            colorButton.style.color = randomButtonColor.toLowerCase() === '#ffffff' ? 'black' : 'white'; // Text color
-            colorButton.textContent = getColorName(randomButtonColor); // Update button text based on color
-
+            colorButton.style.color = isLightColor(randomButtonColor) ? 'black' : 'white';
+            colorButton.textContent = getColorName(randomButtonColor);
         }, 1000); // Change colors every second
     }
 
@@ -125,7 +145,6 @@
     }
 
     function getColorName(hex) {
-        // Map some hex colors to names (add more as needed)
         const colors = {
             "#FF0000": "Red",
             "#00FF00": "Green",
@@ -137,6 +156,14 @@
             "#00FFFF": "Cyan",
         };
         return colors[hex.toUpperCase()] || hex; // Return name if exists, else hex code
+    }
+
+    function isLightColor(color) {
+        const hex = color.replace('#', '');
+        const r = parseInt(hex.substring(0, 2), 16);
+        const g = parseInt(hex.substring(2, 4), 16);
+        const b = parseInt(hex.substring(4, 6), 16);
+        return (r * 0.299 + g * 0.587 + b * 0.114) > 186;
     }
 
     function changeBackgroundToButtonColor() {
